[project]
name = "dailyword-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot==13.11",
    "redis",
    "oauth2client",
    "gspread",
    "pandas",
    "pydrive",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "pytest-mock",
    "flake8==4.0.1",
    "fakeredis",
    "autopep8",
]

